--- a/Mendiola_Palero_BT701_TP/app/src/main/res/layout/images.xml
+++ b/Mendiola_Palero_BT701_TP/app/src/main/res/layout/images.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,19 +11,27 @@
         android:id="@+id/aespaCard1"
         android:layout_width="116dp"
         android:layout_height="120dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.054"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.163"
         app:srcCompat="@drawable/aespa_logo"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="100dp" />
+        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/aespaCard2"
         android:layout_width="116dp"
         android:layout_height="120dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.163"
         app:srcCompat="@drawable/aespa_logo"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="100dp" />
+        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/aespaCard3"
@@ -92,6 +100,10 @@
         android:id="@+id/aespaCard10"
         android:layout_width="116dp"
         android:layout_height="120dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="278dp"
+        android:layout_marginBottom="158dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="16dp"
@@ -101,6 +113,10 @@
         android:id="@+id/aespaCard11"
         android:layout_width="116dp"
         android:layout_height="120dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="149dp"
+        android:layout_marginBottom="158dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="147dp"
@@ -110,9 +126,13 @@
         android:id="@+id/aespaCard12"
         android:layout_width="116dp"
         android:layout_height="120dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="18dp"
+        android:layout_marginBottom="157dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="279dp"
         tools:layout_editor_absoluteY="484dp" />>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
