--- a/Mendiola_Palero_BT701_TP/app/src/main/res/layout/images.xml
+++ b/Mendiola_Palero_BT701_TP/app/src/main/res/layout/images.xml
@@ -11,6 +11,10 @@
         android:id="@+id/aespaCard1"
         android:layout_width="116dp"
         android:layout_height="120dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="277dp"
+        android:layout_marginBottom="505dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.054"
@@ -24,6 +28,10 @@
         android:id="@+id/aespaCard2"
         android:layout_width="116dp"
         android:layout_height="120dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="149dp"
+        android:layout_marginBottom="505dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -37,6 +45,10 @@
         android:id="@+id/aespaCard3"
         android:layout_width="116dp"
         android:layout_height="120dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="505dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="279dp"
@@ -46,6 +58,10 @@
         android:id="@+id/aespaCard4"
         android:layout_width="116dp"
         android:layout_height="120dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="278dp"
+        android:layout_marginBottom="370dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="16dp"
@@ -55,6 +71,10 @@
         android:id="@+id/aespaCard5"
         android:layout_width="116dp"
         android:layout_height="120dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="149dp"
+        android:layout_marginBottom="370dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="147dp"
@@ -64,6 +84,10 @@
         android:id="@+id/aespaCard6"
         android:layout_width="116dp"
         android:layout_height="120dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="370dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="279dp"
@@ -73,6 +97,10 @@
         android:id="@+id/aespaCard7"
         android:layout_width="116dp"
         android:layout_height="120dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="277dp"
+        android:layout_marginBottom="235dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="16dp"
@@ -82,6 +110,10 @@
         android:id="@+id/aespaCard8"
         android:layout_width="116dp"
         android:layout_height="120dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="149dp"
+        android:layout_marginBottom="235dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="147dp"
@@ -91,6 +123,10 @@
         android:id="@+id/aespaCard9"
         android:layout_width="116dp"
         android:layout_height="120dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="21dp"
+        android:layout_marginBottom="235dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="279dp"
@@ -102,8 +138,8 @@
         android:layout_height="120dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="278dp"
-        android:layout_marginBottom="158dp"
+        android:layout_marginEnd="277dp"
+        android:layout_marginBottom="100dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="16dp"
@@ -115,8 +151,8 @@
         android:layout_height="120dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="149dp"
-        android:layout_marginBottom="158dp"
+        android:layout_marginEnd="150dp"
+        android:layout_marginBottom="100dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="147dp"
@@ -128,8 +164,8 @@
         android:layout_height="120dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="157dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="100dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="279dp"
