--- a/Mendiola_Palero_BT701_TP/app/src/main/res/layout/images.xml
+++ b/Mendiola_Palero_BT701_TP/app/src/main/res/layout/images.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,10 +17,10 @@
         android:layout_marginBottom="505dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.054"
+        app:layout_constraintHorizontal_bias="0.888"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.163"
+        app:layout_constraintVertical_bias="0.943"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints" />
 
@@ -30,16 +30,10 @@
         android:layout_height="120dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="149dp"
-        android:layout_marginBottom="505dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.163"
         app:srcCompat="@drawable/aespa_logo"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="147dp"
+        tools:layout_editor_absoluteY="100dp" />
 
     <ImageView
         android:id="@+id/aespaCard3"
@@ -169,6 +163,6 @@
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="279dp"
-        tools:layout_editor_absoluteY="484dp" />>
+        tools:layout_editor_absoluteY="484dp" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
