--- a/Mendiola_Palero_BT701_TP/app/src/main/res/layout/images.xml
+++ b/Mendiola_Palero_BT701_TP/app/src/main/res/layout/images.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,16 +11,12 @@
         android:id="@+id/aespaCard1"
         android:layout_width="116dp"
         android:layout_height="120dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="277dp"
-        android:layout_marginBottom="505dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.888"
+        app:layout_constraintHorizontal_bias="0.054"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.943"
+        app:layout_constraintVertical_bias="0.163"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints" />
 
@@ -28,21 +24,19 @@
         android:id="@+id/aespaCard2"
         android:layout_width="116dp"
         android:layout_height="120dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.163"
         app:srcCompat="@drawable/aespa_logo"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="100dp" />
+        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/aespaCard3"
         android:layout_width="116dp"
         android:layout_height="120dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="505dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="279dp"
@@ -52,10 +46,6 @@
         android:id="@+id/aespaCard4"
         android:layout_width="116dp"
         android:layout_height="120dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="278dp"
-        android:layout_marginBottom="370dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="16dp"
@@ -65,10 +55,6 @@
         android:id="@+id/aespaCard5"
         android:layout_width="116dp"
         android:layout_height="120dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="149dp"
-        android:layout_marginBottom="370dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="147dp"
@@ -78,10 +64,6 @@
         android:id="@+id/aespaCard6"
         android:layout_width="116dp"
         android:layout_height="120dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="370dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="279dp"
@@ -91,10 +73,6 @@
         android:id="@+id/aespaCard7"
         android:layout_width="116dp"
         android:layout_height="120dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="277dp"
-        android:layout_marginBottom="235dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="16dp"
@@ -104,10 +82,6 @@
         android:id="@+id/aespaCard8"
         android:layout_width="116dp"
         android:layout_height="120dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="149dp"
-        android:layout_marginBottom="235dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="147dp"
@@ -117,10 +91,6 @@
         android:id="@+id/aespaCard9"
         android:layout_width="116dp"
         android:layout_height="120dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="21dp"
-        android:layout_marginBottom="235dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="279dp"
@@ -132,8 +102,8 @@
         android:layout_height="120dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="277dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginEnd="278dp"
+        android:layout_marginBottom="158dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="16dp"
@@ -145,8 +115,8 @@
         android:layout_height="120dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="150dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginEnd="149dp"
+        android:layout_marginBottom="158dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="147dp"
@@ -158,11 +128,11 @@
         android:layout_height="120dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginBottom="157dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="279dp"
-        tools:layout_editor_absoluteY="484dp" />
+        tools:layout_editor_absoluteY="484dp" />>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
