--- a/Mendiola_Palero_BT701_TP/app/src/main/res/layout/activity_main.xml
+++ b/Mendiola_Palero_BT701_TP/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.381"
-        app:srcCompat="@drawable/aespa_background" />
+        app:srcCompat="@drawable/aespa_background"
+        tools:ignore="ContentDescription" />
 
     <include
         layout="@layout/images"
