--- a/Mendiola_Palero_BT701_TP/app/src/main/res/layout/images.xml
+++ b/Mendiola_Palero_BT701_TP/app/src/main/res/layout/images.xml
@@ -11,12 +11,10 @@
         android:id="@+id/aespaCard1"
         android:layout_width="116dp"
         android:layout_height="120dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.054"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.163"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="281dp"
+        android:layout_marginBottom="486dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints" />
 
@@ -24,12 +22,10 @@
         android:id="@+id/aespaCard2"
         android:layout_width="116dp"
         android:layout_height="120dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.163"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="153dp"
+        android:layout_marginBottom="486dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints" />
 
@@ -37,6 +33,10 @@
         android:id="@+id/aespaCard3"
         android:layout_width="116dp"
         android:layout_height="120dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="486dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="279dp"
@@ -46,6 +46,10 @@
         android:id="@+id/aespaCard4"
         android:layout_width="116dp"
         android:layout_height="120dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="281dp"
+        android:layout_marginBottom="357dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="16dp"
@@ -55,6 +59,10 @@
         android:id="@+id/aespaCard5"
         android:layout_width="116dp"
         android:layout_height="120dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="152dp"
+        android:layout_marginBottom="355dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="147dp"
@@ -64,6 +72,10 @@
         android:id="@+id/aespaCard6"
         android:layout_width="116dp"
         android:layout_height="120dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="355dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="279dp"
@@ -73,6 +85,10 @@
         android:id="@+id/aespaCard7"
         android:layout_width="116dp"
         android:layout_height="120dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="280dp"
+        android:layout_marginBottom="225dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="16dp"
@@ -82,6 +98,10 @@
         android:id="@+id/aespaCard8"
         android:layout_width="116dp"
         android:layout_height="120dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="151dp"
+        android:layout_marginBottom="224dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="147dp"
@@ -91,6 +111,10 @@
         android:id="@+id/aespaCard9"
         android:layout_width="116dp"
         android:layout_height="120dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="23dp"
+        android:layout_marginBottom="221dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="279dp"
@@ -102,8 +126,8 @@
         android:layout_height="120dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="278dp"
-        android:layout_marginBottom="158dp"
+        android:layout_marginEnd="279dp"
+        android:layout_marginBottom="93dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="16dp"
@@ -115,8 +139,8 @@
         android:layout_height="120dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="149dp"
-        android:layout_marginBottom="158dp"
+        android:layout_marginEnd="153dp"
+        android:layout_marginBottom="92dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="147dp"
@@ -128,11 +152,11 @@
         android:layout_height="120dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="157dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="90dp"
         app:srcCompat="@drawable/aespa_logo"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="279dp"
-        tools:layout_editor_absoluteY="484dp" />>
+        tools:layout_editor_absoluteY="484dp" />
 
 </RelativeLayout>
