--- a/MendiolaPalero_FinalsTP/app/src/main/res/layout/activity_main.xml
+++ b/MendiolaPalero_FinalsTP/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+  <!--NUMBER 1-->
   <Spinner
       android:id="@+id/sp1"
       android:layout_width="wrap_content"
@@ -30,5 +31,20 @@
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.369"
       app:srcCompat="@drawable/school_logo" />
+
+  <Button
+      android:id="@+id/button1"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Save"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.498"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.677"
+      tools:ignore="MissingConstraints">
+
+  </Button>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
